// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tests/atelier.test.js[2m > [22mToolshot[2m > [22mcomponents/SizePicker.tools.svelte: Custom values 1`] = `
<div
  class="s-iHgI6ExwAEwa"
  role="toolbar"
>
  <button
    class="primary iconOnly noColor s-NMyTiX1zi6rz"
    title="label.medium-viewport [320 x 480]"
  >
    <i
      class="material-icons s-NMyTiX1zi6rz"
    >
      laptop
    </i>
     
     
  </button>
  <!--&lt;Button&gt;-->
  <button
    class="primary iconOnly noColor s-NMyTiX1zi6rz"
    title="label.medium-viewport [480 x 800]"
  >
    <i
      class="material-icons s-NMyTiX1zi6rz"
    >
      border_outer
    </i>
     
     
  </button>
  <!--&lt;Button&gt;-->
</div>
`;

exports[`tests/atelier.test.js[2m > [22mToolshot[2m > [22mcomponents/SizePicker.tools.svelte: Default values 1`] = `
<div
  class="s-iHgI6ExwAEwa"
  role="toolbar"
>
  <button
    class="primary iconOnly noColor s-NMyTiX1zi6rz"
    title="label.small-viewport [320 x 568]"
  >
    <i
      class="material-icons s-NMyTiX1zi6rz"
    >
      phone_android
    </i>
     
     
  </button>
  <!--&lt;Button&gt;-->
  <button
    class="primary iconOnly noColor s-NMyTiX1zi6rz"
    title="label.medium-viewport [414 x 896]"
  >
    <i
      class="material-icons s-NMyTiX1zi6rz"
    >
      stay_current_landscape
    </i>
     
     
  </button>
  <!--&lt;Button&gt;-->
  <button
    class="primary iconOnly noColor s-NMyTiX1zi6rz"
    title="label.large-viewport [834 x 1112]"
  >
    <i
      class="material-icons s-NMyTiX1zi6rz"
    >
      tablet_android
    </i>
     
     
  </button>
  <!--&lt;Button&gt;-->
</div>
`;
